# edge-router

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
lib/router-api/: Cargo.toml
lib/router-api/src/: lib.rs
lib/router-api/src/galactic/: mod.rs  vpc.rs  vpc_attachment.rs
lib/router-api/src/v1alpha1/: mod.rs  service_binding.rs  vpc_egress.rs  vpc_ingress.rs  vpc_route.rs  vpc_service.rs
lib/router-core/: Cargo.toml
lib/router-core/src/: endpoint.rs  error.rs  lib.rs  registry.rs
lib/router-galactic/: Cargo.toml
lib/router-galactic/src/: client.rs  discovery.rs  lib.rs
lib/router-proxy/: Cargo.toml
lib/router-proxy/src/: forwarder.rs  health_check.rs  http.rs  lib.rs  load_balancer.rs  metrics.rs  middleware.rs  mtls.rs  policy.rs  tls.rs  tracing.rs
lib/router-tunnel/: Cargo.toml
lib/router-tunnel/src/: iroh.rs  lib.rs
manifests/crds/: vpcroute.yaml  vpcservice.yaml
manifests/deployments/: router-controller.yaml  router-gateway.yaml
manifests/examples/: basic-example.yaml
manifests/rbac/: rbac.yaml
