[workspace]
members = [
    "lib/router-api",
    "lib/router-core",
    "lib/router-galactic",
    "lib/router-proxy",
    "lib/router-tunnel",
    "bin/router-controller",
    "bin/router-gateway",
    "bin/service-discovery",
    "bin/tunnel-gateway",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Datum Cloud <team@datumapis.com>"]
repository = "https://github.com/datumapis/datum-cloud"
license = "Apache-2.0"

[workspace.dependencies]
# Kubernetes
kube = { version = "0.95", features = ["runtime", "derive", "ws"] }
kube-runtime = "0.95"
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP/gRPC
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Async utilities
async-trait = "0.1"

# Metrics
prometheus = { version = "0.13", features = ["protobuf"] }

# OpenTelemetry Tracing
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25"

# Networking
ipnetwork = "0.20"
socket2 = "0.5"

# Data serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
lru = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
