[package]
name = "router-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
router-api = { path = "../router-api" }
router-core = { path = "../router-core" }
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
async-trait.workspace = true
prometheus.workspace = true
