[package]
name = "router-tunnel"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
router-api = { path = "../router-api" }
kube = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
